--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -16,6 +16,10 @@
   --ifm-code-font-size: 95%;
 }
 
+:root {
+  --ifm-font-family-base: 'Inter'
+}
+
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
   --ifm-color-primary: #25c2a0;
@@ -37,3 +41,5 @@
 [data-theme='dark'] .docusaurus-highlight-code-line {
   background-color: rgba(0, 0, 0, 0.3);
 }
+
+@import url("https://fonts.googleapis.com/css2?family=Lexend&family=Inter");
