--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -17,16 +17,41 @@
 }
 
 :root {
-  --ifm-font-family-base: 'Inter';
+  --ifm-font-family-base: "Inter";
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: 'Lexend';
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Lexend";
+}
+
+h1 {
+  text-transform: capitalize;
+}
+
+h2,
+h3,
+h4,
+h5,
+h6 {
+  text-transform: lowercase;
+}
+
+h2::first-letter,
+h3::first-letter,
+h4::first-letter,
+h5::first-letter,
+h6::first-letter {
+  text-transform: uppercase;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
-[data-theme='dark'] {
-  --ifm-color-primary: #3ED0DD;
+[data-theme="dark"] {
+  --ifm-color-primary: #3ed0dd;
   --ifm-color-primary-dark: ##26cad9;
   --ifm-color-primary-darker: #24bfcd;
   --ifm-color-primary-darkest: #1e9da8;
@@ -42,7 +67,7 @@ h1, h2, h3, h4, h5, h6 {
   padding: 0 var(--ifm-pre-padding);
 }
 
-[data-theme='dark'] .docusaurus-highlight-code-line {
+[data-theme="dark"] .docusaurus-highlight-code-line {
   background-color: rgba(0, 0, 0, 0.3);
 }
 
