--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -49,7 +49,7 @@ h6::first-letter {
 }
 
 :root {
-  --docusaurus-highlighted-code-line-bg: rgb(102, 107, 121);
+  --docusaurus-highlighted-code-line-bg: #e6ecf3;
 }
 
 /* If you have a different syntax highlighting theme for dark mode. */
