--- a/docs/build-your-software-catalog/set-catalog-rbac/styles.module.css
+++ b/docs/build-your-software-catalog/set-catalog-rbac/styles.module.css
@@ -1,59 +1,31 @@
-.red {
-  color: red;
-}
-.red[aria-selected="true"] {
-  border-bottom-color: red;
-}
-
-.orange {
-  color: orange;
-}
-.orange[aria-selected="true"] {
-  border-bottom-color: orange;
+.admonition_tip[aria-selected="true"] {
+  color: rgb(0, 148, 0);
+  border-bottom-color: rgb(0, 148, 0);
+  /* color: #96440e;
+    border-bottom-color: #96440e; */
 }
 
-.yellow {
-  color: yellow;
-}
-.yellow[aria-selected="true"] {
-  border-bottom-color: yellow;
+[data-theme="dark"] .admonition_tip[aria-selected="true"] {
+  color: rgb(0, 148, 0);
+  border-bottom-color: rgb(0, 148, 0);
 }
 
-.tab_primary[aria-selected="true"] {
-  color: #3ed0dd;
-  border-bottom-color: #3ed0dd;
+.admonition_info[aria-selected="true"] {
+  color: rgb(76, 179, 212);
+  border-bottom-color: rgb(76, 179, 212);
 }
 
-.tab_primary_dark[aria-selected="true"] {
-  color: #26cad9;
-  border-bottom-color: #26cad9;
+[data-theme="dark"] .admonition_info[aria-selected="true"] {
+  color: rgb(76, 179, 212);
+  border-bottom-color: rgb(76, 179, 212);
 }
 
-.tab_primary_darker[aria-selected="true"] {
-  color: #24bfcd;
-  border-bottom-color: #24bfcd;
+.admonition_caution[aria-selected="true"] {
+  color: rgb(230, 167, 0);
+  border-bottom-color: rgb(230, 167, 0);
 }
 
-.tab_primary_darkest[aria-selected="true"] {
-  color: #1e9da8;
-  border-bottom-color: #1e9da8;
-}
-.tab_primary_light {
-  color: #56d6e1;
-}
-.tab_primary_light[aria-selected="true"] {
-  border-bottom-color: #56d6e1;
-}
-
-.tab_primary_lighter {
-  color: #62d9e3;
-}
-.tab_primary_lighter[aria-selected="true"] {
-  border-bottom-color: #62d9e3;
-}
-.tab_primary_lightest {
-  color: #86e2ea;
-}
-.tab_primary_lightest[aria-selected="true"] {
-  border-bottom-color: #86e2ea;
+[data-theme="dark"] .admonition_caution[aria-selected="true"] {
+  color: rgb(230, 167, 0);
+  border-bottom-color: rgb(230, 167, 0);
 }
