add docsly to site, make sidebar font smaller, move setup methods down in the sidebar

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -18,8 +18,11 @@
 
 :root {
   --ifm-font-family-base: "Inter";
-  --ifm-sidebar-font: "Lexend";
   --doc-sidebar-width: 308px !important;
+}
+
+.theme-doc-sidebar-menu {
+  font-size: 15px;
 }
 
 .menu__link {
@@ -52,6 +55,7 @@ h6::first-letter {
   --ifm-color-primary-light: #56d6e1;
   --ifm-color-primary-lighter: #62d9e3;
   --ifm-color-primary-lightest: #86e2ea;
+  --ifm-menu-color: #f2eded;
 }
 
 :root {
